<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>edu.ezip.ing1.pds</groupId>
        <artifactId>smart-city-by-ezip</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <groupId>edu.ezip.ing1.pds.client</groupId>
    <artifactId>xmart-frontend</artifactId>
    <packaging>jar</packaging>

    <build>
        <plugins>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>edu.ezip.ing1.pds.MainView</mainClass>
                    <options>
                        <option>--module-path</option>
                        <option>${javafx.module.path}</option> <!-- The path to your JavaFX SDK -->
                        <option>--add-modules</option>
                        <option>javafx.controls,javafx.fxml</option> <!-- Add other JavaFX modules if needed -->
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <javafx.module.path>"/home/onecode24/Documents/School/ING1/SIRIUS/openjfx-23.0.2_linux-x64_bin-sdk/javafx-sdk-23.0.2/lib"</javafx.module.path>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.8</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.7</version>
        </dependency>

        <dependency>
            <groupId>edu.ezip.ing1.pds.commons</groupId>
            <artifactId>xmart-city-commons</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>edu.ezip.ing1.pds</groupId>
            <artifactId>xmart-city-business-dto</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>edu.ezip.commons</groupId>
            <artifactId>logging-utils</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>edu.ezip.ing1.pds.client.commons</groupId>
            <artifactId>xmart-city-client-commons</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>de.vandermeer</groupId>
            <artifactId>asciitable</artifactId>
            <version>0.3.2</version>
        </dependency>
        <dependency>
            <groupId>edu.ezip.ing1.pds.client.commons</groupId>
            <artifactId>xmart-city-client-commons</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <!-- JavaFX Dependencies -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21</version>
        </dependency>
    </dependencies>


</project>